04/exercise1/shippy-svc.yaml
apiVersion: v1
kind: Service
metadata: 
  name: shippy-svc
spec:
  ports:
  - port: 7000
    targetPort: 7000
  selector:
    name: shippy-app
