04/exercise1/ingress-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resources
  namespace: shipy
  annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: shipy
           port:
             number: 7000
